Incorporated Dr. Eusebi's comments from July 3rd

--- a/data/abstract.tex
+++ b/data/abstract.tex
@@ -19,7 +19,7 @@
 \pagenumbering{roman} % Roman numerals
 \setcounter{page}{2}
 
-\indent The LHCb experiment has reported slight discrepancies in the ratio in which B mesons decay to muons and electrons. Some theories attempt to explain these anomalies by theorizing the existence of new particles beyond the standard model. This study performs a search for a new heavy neutral gauge boson at the LHC with the CMS experiment. This Z' boson is assumed to couple mostly to third generation fermions, specifically b-quarks. The main production channel is b-quark fusion. In short, a study for Z'$\rightarrow b\bar{b}$ decays is proposed. Furthermore, since the b-quark PDF's are at least 10 times lower when compared to the gluon PDF's, we take advantage of the large contribution of bottom quarks coming from gluon-splitting to Z' production.  The final state consists of 4 b jets, with the two extra jets coming from the initial gluon splitting. Results are correspond to 27.27 $fb^{-1}$ of proton-proton collision data recorded by the CMS detector at the LHC with a center-of-mass-energy of 13 TeV during 2016.
+\indent The LHCb experiment has reported slight discrepancies in the ratio in which B mesons decay to muons and electrons. Some theories attempt to explain these anomalies by theorizing the existence of new particles beyond the standard model. This study performs a search for a new heavy neutral gauge boson at the LHC with the CMS experiment. This Z' boson is assumed to couple mostly to third generation fermions, specifically b-quarks. The main production channel is b-quark fusion and since the b-quark PDF's are at least 10 times lower when compared to the gluon PDF's, we take advantage of the large contribution of bottom quarks coming from gluon-splitting to Z' production. In short, a study for Z'$\rightarrow b\bar{b}$ decays is presented. The final state consists of 4 b jets, with the two extra jets coming from the initial gluon splitting. Results correspond to 35.9 $fb^{-1}$ of proton-proton collision data recorded by the CMS detector at the LHC with a center-of-mass-energy of 13 TeV during 2016.
 
 
  
