--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1169,3 +1169,18 @@ author = "B. Andersson and G. Gustafson and G. Ingelman and T. Sjöstrand"
       url     = "http://www.sciencedirect.com/science/article/pii/S0168900203013688",
       author  = "S. Agostinelli and others",
 }
+
+@article{Bifani_2018,
+  doi = {10.1088/1361-6471/aaf5de},
+  url = {https://doi.org/10.1088%2F1361-6471%2Faaf5de},
+  year = 2018,
+  month = {dec},
+  publisher = {{IOP} Publishing},
+  volume = {46},
+  number = {2},
+  pages = {023001},
+  author = {Simone Bifani and Sebastien Descotes-Genon and Antonio Romero Vidal and Marie-Heene Schune},
+  title = {Review of lepton universality tests in B decays},
+  journal = {Journal of Physics G: Nuclear and Particle Physics},
+  abstract = {Several measurements of tree- and loop-level -hadron decays performed in the recent years hint at a possible violation of Lepton Universality. This article presents an experimental and theoretical overview of the current status of the field.}
+}
